--- a/Labs/LaTeX/Script/how_to_latex.tex
+++ b/Labs/LaTeX/Script/how_to_latex.tex
@@ -1,4 +1,4 @@
-\documentclass[justified, notoc]{tufte-book} %justified ovverides the rugged-right style
+\documentclass[]{tufte-book} %justified ovverides the rugged-right style
 
 \usepackage{graphicx}
 \usepackage{color}
@@ -15,6 +15,9 @@
 \hypersetup{colorlinks=true, breaklinks=true, linkcolor=darkblue, menucolor=darkblue, urlcolor=darkblue, citecolor=darkblue}
   
 \usepackage[toc,page]{appendix}
+
+\setcounter{secnumdepth}{1}
+\setcounter{tocdepth}{1}
 
 \lstset{
 language=[LaTeX]{TeX},
